k8s/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: light-messages-ingress
  namespace: default
  annotations:
    # Make sure mime-type is set 
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true" 
spec:
  ingressClassName: external-nginx
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: channels-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: static-file-server
                port:
                  number: 80
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: static-file-server
                port:
                  number: 80
